--- a/.config/Trolltech.conf
+++ b/.config/Trolltech.conf
@@ -6,9 +6,9 @@ usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqjpeg.so=40801, 0, x86_64 l
 usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqmng.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-20T02:32:31
 usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtga.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-20T02:32:31
 usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtiff.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-20T02:32:31
-usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqconnmanbearer.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-11T19:18:51
-usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqgenericbearer.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-11T19:18:51
-usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqnmbearer.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-11T19:18:51
+usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqconnmanbearer.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-20T02:32:31
+usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqgenericbearer.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-20T02:32:31
+usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqnmbearer.so=40801, 0, x86_64 linux g++-4 full-config, 2013-12-20T02:32:31
 
 [Qt%20Factory%20Cache%204.8]
 com.trolltech.Qt.QInputContextFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\inputmethods\libqimsw-multi.so=2013-12-20T02:32:30, imsw-multi
@@ -18,9 +18,9 @@ com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqmng.so=2013-12-20T02:32:31, mng
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtga.so=2013-12-20T02:32:31, tga
 com.trolltech.Qt.QImageIOHandlerFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\imageformats\libqtiff.so=2013-12-20T02:32:31, tiff, tif
-com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqconnmanbearer.so=2013-12-11T19:18:51, connman
-com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqgenericbearer.so=2013-12-11T19:18:51, generic
-com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqnmbearer.so=2013-12-11T19:18:51, networkmanager
+com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqconnmanbearer.so=2013-12-20T02:32:31, connman
+com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqgenericbearer.so=2013-12-20T02:32:31, generic
+com.trolltech.Qt.QBearerEngineFactoryInterface%3A\usr\lib\x86_64-linux-gnu\qt4\plugins\bearer\libqnmbearer.so=2013-12-20T02:32:31, networkmanager
 
 [Qt]
 font="Sans Serif,9,-1,5,50,0,0,0,0,0"
@@ -58,4 +58,4 @@ customColors\12=4294967295
 customColors\13=4294967295
 customColors\14=4294967295
 customColors\15=4294967295
-filedialog=@ByteArray(\0\0\0\xbe\0\0\0\x3\0\0\0\x1e\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0^\0\0\xe\0\x1\0\0\0\x6\x1\0\0\0\x1\0\0\0\x2\0\0\0\x5\x66ile:\0\0\0\x16\x66ile:///home/chilicuil\0\0\0\x5\0\0\0\x1e\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0\0\0\x30\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0i\0s\0o\0\0\0n\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0s\0o\0\x66\0t\0w\0\x61\0r\0\x65\0-\0i\0m\0\x61\0g\0\x65\0s\0/\0i\0s\0o\0/\0w\0i\0n\0\x64\0o\0w\0s\0/\0w\0i\0n\0_\0x\0p\0\0\0P\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0s\0o\0\x66\0t\0w\0\x61\0r\0\x65\0-\0i\0m\0\x61\0g\0\x65\0s\0/\0i\0s\0o\0\0\0x\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0m\0i\0s\0\x63\0/\0u\0\x62\0u\0n\0t\0u\0/\0r\0\x65\0l\0\x65\0\x61\0s\0\x65\0/\0u\0\x62\0u\0n\0t\0u\0-\0\x31\0\x32\0.\0\x30\0\x34\0/\0i\0s\0o\0s\0/\0u\0\x62\0u\0n\0t\0u\0\0\0P\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0s\0o\0\x66\0t\0w\0\x61\0r\0\x65\0-\0i\0m\0\x61\0g\0\x65\0s\0/\0i\0s\0o\0\0\0~\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\0\x1)
+filedialog=@ByteArray(\0\0\0\xbe\0\0\0\x3\0\0\0\x1e\0\0\0\xff\0\0\0\0\0\0\0\x2\0\0\0^\0\0\xe\0\x1\0\0\0\x6\x1\0\0\0\x1\0\0\0\x2\0\0\0\x5\x66ile:\0\0\0\x16\x66ile:///home/chilicuil\0\0\0\x5\0\0\0\x1e\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0\0\0\x30\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0i\0s\0o\0\0\0n\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0s\0o\0\x66\0t\0w\0\x61\0r\0\x65\0-\0i\0m\0\x61\0g\0\x65\0s\0/\0i\0s\0o\0/\0w\0i\0n\0\x64\0o\0w\0s\0/\0w\0i\0n\0_\0x\0p\0\0\0P\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0\x64\0\x61\0t\0\x61\0/\0s\0o\0\x66\0t\0w\0\x61\0r\0\x65\0-\0i\0m\0\x61\0g\0\x65\0s\0/\0i\0s\0o\0\0\0x\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0/\0m\0i\0s\0\x63\0/\0u\0\x62\0u\0n\0t\0u\0/\0r\0\x65\0l\0\x65\0\x61\0s\0\x65\0/\0u\0\x62\0u\0n\0t\0u\0-\0\x31\0\x32\0.\0\x30\0\x34\0/\0i\0s\0o\0s\0/\0u\0\x62\0u\0n\0t\0u\0\0\0\x1e\0/\0h\0o\0m\0\x65\0/\0\x63\0h\0i\0l\0i\0\x63\0u\0i\0l\0\0\0~\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\0\x1)
