--- a/.conkyrc
+++ b/.conkyrc
@@ -1,1 +1,67 @@
-.conkyrc-lenovo-edge
+# Last review            Sun 18 Sep 2011 03:02:05 AM CDT
+
+# set to yes if you want Conky to be forked in the background
+background no
+
+# --- not supported in Conky 1.8.0 ---
+#use_xft yes
+# Xft font when Xft is enabled
+#xftfont Bitstream Vera Sans Mono:size=8
+#xftfont ProggySquareTT
+#xftfont Envy Code R:size=8
+
+# text alpha when using Xft
+#xftalpha 0.8
+
+# For xcompmgr
+##own_window yes
+#own_window no
+##own_window_transparent yes
+##own_window_type desktop
+
+# Use double buffering (reduces flicker, may not work for everyone)
+##double_buffer yes
+#------------------------------------
+
+# Default colors and also border colors
+default_color a0a0a0
+#default_color white
+default_shade_color black
+default_outline_color a0a0a0
+#default_outline_color white
+
+#out_to_console no
+out_to_stderr no
+
+update_interval 1.5
+#uptime_interval_on_battery 5.0
+
+# This is the number of times Conky will update before quitting.
+# Set to zero to run forever.
+total_run_times 0
+
+text_buffer_size 512
+
+default_bar_size 100 8
+use_spacer none
+if_up_strictness address
+
+#pre_exec curl ifconfig.me
+
+TEXT
+^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/clock.xbm) ${time %H:%M %a(%d)-%b} \
+| ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/diskette.xbm) ${fs_used_perc }% \
+~ ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/diskette.xbm) ${fs_used_perc /home}% \
+|${if_up wlan0} ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/wifi_01.xbm) wlan0 ${downspeed wlan0} \
+^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/net_down_03.xbm) ${addr wlan0}${endif}\
+${if_up wlan1} ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/wifi_01.xbm) wlan1 ${downspeed wlan1} \
+^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/net_down_03.xbm) ${addr wlan1}${endif}\
+${if_up eth0} ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/net_wired.xbm) eth0 ${downspeed eth0} \
+^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/net_down_03.xbm) ${addr eth0}${endif} \
+| ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/cpu.xbm) ${cpu cpu0}% \
+^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/mem.xbm) ${memperc}% \
+| ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/bat_full_01.xbm) ${battery_percent BAT1}% \
+${battery_time BAT1} ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/temp.xbm) ${acpitemp}°\
+| ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/spkr_01.xbm) \
+${exec sh -c 'amixer get 'Master',0 | egrep -o '[0-9]{1,3}%''} \
+${if_mpd_playing}^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/phones.xbm) ${mpd_smart}${endif}
