--- a/.conkyrc
+++ b/.conkyrc
@@ -63,5 +63,5 @@ ${if_up eth0} ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/net_wired.xbm) 
 | ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/bat_full_01.xbm) ${battery_percent BAT1}% \
 ${battery_time BAT1} ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/temp.xbm) ${acpitemp}°\
 | ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/spkr_01.xbm) \
-${exec sh -c 'amixer get 'Master',0 | egrep -o '[0-9]{1,3}%''} \
+${exec sh -c 'amixer get 'Master',0 | egrep -m1 -o '[0-9]{1,3}%''} \
 ${if_mpd_playing}^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/phones.xbm) ${mpd_smart}${endif}
