--- a/.config/libfm/libfm.conf
+++ b/.config/libfm/libfm.conf
@@ -4,7 +4,7 @@ use_trash=1
 confirm_del=1
 show_internal_volumes=0
 terminal=x-terminal-emulator %s
-archiver=file-roller
+archiver=xarchiver
 thumbnail_local=1
 thumbnail_max=4024
 
