--- a/.pbuilderrc
+++ b/.pbuilderrc
@@ -33,7 +33,7 @@
 ###########################################################
 # https://wiki.ubuntu.com/PbuilderHowto
 
-if [ -z "$PATH_PBUILDER" ]; then
+if [ -z "${PATH_PBUILDER}" ]; then
     PATH_PBUILDER="/var/cache/pbuilder" #without the last "/"
 fi
 
@@ -41,10 +41,10 @@ fi
 UNSTABLE_CODENAME="sid"
 TESTING_CODENAME="squeeze"
 STABLE_CODENAME="lenny"
-STABLE_BACKPORTS_SUITE="$STABLE_CODENAME-backports"
+STABLE_BACKPORTS_SUITE="${STABLE_CODENAME}-backports"
 
 # List of Debian suites.
-DEBIAN_SUITES=($UNSTABLE_CODENAME $TESTING_CODENAME $STABLE_CODENAME
+DEBIAN_SUITES=(${UNSTABLE_CODENAME} ${TESTING_CODENAME} ${STABLE_CODENAME}
     "unstable" "testing" "stable")
 
 # List of Ubuntu suites. Update these when needed.
@@ -58,10 +58,10 @@ UBUNTU_MIRROR="us.archive.ubuntu.com"
 # Optionally use the changelog of a package to determine the suite to use if
 # none set.
 if [ -z "${DIST}" ] && [ -r "debian/changelog" ]; then
-    DIST=$(dpkg-parsechangelog | awk '/^Distribution: / {print $2}')
+    DIST="$(dpkg-parsechangelog | awk '/^Distribution: / {print $2}')"
     # Use the unstable suite for certain suite values.
-    if $(echo "experimental UNRELEASED" | grep -q $DIST); then
-        DIST="$UNSTABLE_CODENAME"
+    if $(echo "experimental UNRELEASED" | grep "${DIST}" >/dev/null 2>&1); then
+        DIST="${UNSTABLE_CODENAME}"
     fi
 fi
 
@@ -70,77 +70,72 @@ fi
 : ${DIST:="$(lsb_release --short --codename)"}
 
 # Optionally change Debian release states in $DIST to their names.
-case "$DIST" in
-    unstable)
-        DIST="$UNSTABLE_CODENAME"
-        ;;
-    testing)
-        DIST="$TESTING_CODENAME"
-        ;;
-    stable)
-        DIST="$STABLE_CODENAME"
-        ;;
+case "${DIST}" in
+    unstable) DIST="${UNSTABLE_CODENAME}" ;;
+    testing)  DIST="${TESTING_CODENAME}"  ;;
+    stable)   DIST="$STABLE_CODENAME"     ;;
 esac
 
 # Optionally set the architecture to the host architecture if none set. Note
 # that you can set your own default (i.e. ${ARCH:="i386"}).
 : ${ARCH:="$(dpkg --print-architecture)"}
 
-NAME="$DIST"
+NAME="${DIST}"
 if [ -n "${ARCH}" ]; then
-    NAME="$NAME-$ARCH"
-    DEBOOTSTRAPOPTS=("--arch" "$ARCH" "${DEBOOTSTRAPOPTS[@]}")
+    NAME="${NAME}-${ARCH}"
+    DEBOOTSTRAPOPTS=("--arch" "${ARCH}" "${DEBOOTSTRAPOPTS[@]}")
 fi
-
 
 #################
 # Base settings #
 #################
 
 ###################################################################################
-BASETGZ="$PATH_PBUILDER/$NAME/$NAME-base.tgz"
+BASETGZ="${PATH_PBUILDER}/${NAME}/${NAME}-base.tgz"
 # Optionally, set BASEPATH (and not BASETGZ) if using cowbuilder
 # BASEPATH="$PATH_PBUILDER/$NAME/base.cow/"
-DISTRIBUTION="$DIST"
+DISTRIBUTION="${DIST}"
 #use it only if you've followed http://viajemotu.wordpress.com/2010/08/10/notas-sobre-pbuilder/
-if [ -d "$HOME"/misc/ubuntu/release/results/"$NAME"/ ]; then
-    export BUILDRESULT="$HOME/misc/ubuntu/release/results/$NAME/"
+if [ -d "${HOME}/misc/ubuntu/release/results/${NAME}/" ]; then
+    export BUILDRESULT="${HOME}/misc/ubuntu/release/results/${NAME}/"
 fi
 #otherwise uncomment the next line
 #export BUILDRESULT="/var/cache/pbuilder/$NAME/result/"
-BINDMOUNTS="$BUILDRESULT"
-APTCACHE="$PATH_PBUILDER/$NAME/aptcache/"
-BUILDPLACE="$PATH_PBUILDER/$NAME/build/"
-HOOKDIR="$HOME/.pbuilder-hooks/"
+BINDMOUNTS="${BUILDRESULT}"
+APTCACHE="${PATH_PBUILDER}/${NAME}/aptcache/"
+BUILDPLACE="${PATH_PBUILDER}/${NAME}/build/"
+HOOKDIR="${HOME}/.pbuilder-hooks/"
 ###################################################################################
 
-if $(echo ${DEBIAN_SUITES[@]} | grep -q $DIST); then
+if $(echo ${DEBIAN_SUITES[@]} | grep ${DIST} >/dev/null 2>&1); then
     # Debian configuration
-    MIRRORSITE="http://$DEBIAN_MIRROR/debian/"
+    MIRRORSITE="http://${DEBIAN_MIRROR}/debian/"
     COMPONENTS="main contrib non-free"
     # This is for enabling backports for the Debian stable suite.
-    if $(echo "$STABLE_CODENAME stable" | grep -q $DIST); then
-        EXTRAPACKAGES="$EXTRAPACKAGES debian-backports-keyring"
-        OTHERMIRROR="$OTHERMIRROR | deb http://www.backports.org/debian $STABLE_BACKPORTS_SUITE $COMPONENTS"
+    if $(echo "${STABLE_CODENAME} stable" | grep ${DIST} >/dev/null 2>&1); then
+        EXTRAPACKAGES="${EXTRAPACKAGES} debian-backports-keyring"
+        OTHERMIRROR="${OTHERMIRROR} | deb http://www.backports.org/debian ${STABLE_BACKPORTS_SUITE} ${COMPONENTS}"
     fi
-elif $(echo ${UBUNTU_SUITES[@]} | grep -q $DIST); then
+elif $(echo ${UBUNTU_SUITES[@]} | grep ${DIST} >/dev/null 2>&1); then
     # Ubuntu configuration
-    MIRRORSITE="http://$UBUNTU_MIRROR/ubuntu/"
+    MIRRORSITE="http://${UBUNTU_MIRROR}/ubuntu/"
     COMPONENTS="main restricted universe multiverse"
 else
-    echo "Unknown distribution: $DIST"
+    echo "Unknown distribution: ${DIST}"
     exit 1
 fi
 
 # gdebi resolution dep, requires gdebi-core
-[ -f /usr/bin/gdebi ] && PBUILDERSATISFYDEPENDSCMD="/usr/lib/pbuilder/pbuilder-satisfydepends-gdebi" || true
+if command -v "gdebi" >/dev/null 2>&1; then
+    PBUILDERSATISFYDEPENDSCMD="/usr/lib/pbuilder/pbuilder-satisfydepends-gdebi" || true
+fi
 
 # ccache
 #sudo mkdir -p "$PATH_PBUILDER/ccache"
 #sudo chmod a+w $PATH_PBUILDER/ccache"
-if [ -f /usr/bin/ccache ]; then
-    export PATH="/usr/lib/ccache:$PATH"
-    export CCACHE_DIR="$HOME/.ccache_ubuntu"
+if command -v "ccache" >/dev/null 2>&1; then
+    export PATH="/usr/lib/ccache:${PATH}"
+    export CCACHE_DIR="${HOME}/.ccache_ubuntu"
     EXTRAPACKAGES="ccache ${EXTRAPACKAGES}"
     BINDMOUNTS="${CCACHE_DIR} ${BINDMOUNTS}"
     #if [ -n "${BUILDUSERID}" ]; then
