--- a/.ssh/config
+++ b/.ssh/config
@@ -25,3 +25,7 @@ Host h.javier.io
 
 Host bitbucket.org
     IdentityFile ~/.ssh/correo.io.id_rsa
+
+Host ccand.cc #hostgator
+    Port 2222
+    PubkeyAuthentication no
