--- a/.conkyrc
+++ b/.conkyrc
@@ -60,8 +60,15 @@ ${if_up eth0} ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/net_wired.xbm) 
 ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/net_down_03.xbm) ${addr eth0}${endif} \
 | ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/cpu.xbm) ${cpu cpu0}% \
 ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/mem.xbm) ${memperc}% \
-| ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/bat_full_01.xbm) ${battery_percent BAT1}% \
-${battery_time BAT1} ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/temp.xbm) ${acpitemp}°\
+|${if_existing /proc/acpi/battery/BAT0} \
+^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/bat_full_01.xbm) ${battery_percent BAT0}% ${battery_time BAT0}\
+${else}${if_existing /sys/class/power_supply/BAT0} \
+^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/bat_full_01.xbm) ${battery_percent BAT0}% ${battery_time BAT0}\
+${else}${if_existing /proc/acpi/battery/BAT1} \
+^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/bat_full_01.xbm) ${battery_percent BAT1}% ${battery_time BAT1}\
+${else}${if_existing /sys/class/power_supply/BAT1} \
+^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/bat_full_01.xbm) ${battery_percent BAT1}% ${battery_time BAT1}\
+${endif} ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/temp.xbm) ${acpitemp}°\
 | ^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/spkr_01.xbm) \
 ${exec sh -c 'amixer get 'Master',0 | egrep -m1 -o '[0-9]{1,3}%''} \
 ${if_mpd_playing}^i(/home/chilicuil/.data/images/icons/dzen2/sm4tik/phones.xbm) ${mpd_smart}${endif}
