ignore more dotfiles

--- a/.gitignore
+++ b/.gitignore
@@ -6,32 +6,41 @@
 
 #But ignore these
 .AbiSuite
-.arduino
-.bosonx
-.esd_auth
-.kchmviewer
-.sxiv
-.remmina
 .adobe
 .alien-arena
+.android
 .appletviewer
+.arduino
 .asadmin*
 .asoundrc*
 .aspell.*
 .bashdb*
 .bash_eternal_history
 .bash_history
+.bazaar
 .bin
 .bittorrent
+.bosonx
 .boumlrc
 .byobu
 .bzr.log
 .cache
 .ccache*
+.cccache/
 .checkbox
 .compiz
 .com.zerog.registry.xml
-.config
+.config/feh/
+.config/htop/
+.config/inkscape/
+.config/LightTable/
+.config/sublime-text-2/
+.config/sublime-text-3/
+.config/terminology/
+.config/transmission/
+.config/vlc/
+.config/wesnoth/
+.config/xarchiver/
 .covers
 .ctags
 .ctrlp_cache
@@ -49,8 +58,10 @@
 .dynamag
 .e
 .easy_e17.conf*
-.mcore
 .enna
+.esd_auth
+.eternalize-data
+.et_patterns_remove
 .exaile
 .exchange
 .fehbg
@@ -61,32 +72,16 @@
 .flrec
 .font*
 .fontconfig
-.NERDTreeBookmarks
-.android
-.bazaar
-.cccache/
-.et_patterns_remove
-.ghc
-.gist-vim
-.goobook_cache
-.icedtea/
-.irssi/config.autosave
-.lastpass
-.m2
-.pip
-.processing
-.pythonbrew/
-.ssh/known_hosts.old
-.vim/bundle/
-.vim/spell/
 .gconf*
 .gconfd
 .gegl*
 .gem
 .gerbview
 .gftp
+.ghc
 .ghttrack.cfg
 .gimp*
+.gist-vim
 .gitk
 .gksu*
 .glivrc
@@ -98,25 +93,31 @@
 #.gnu*
 #.gnupg
 .golly
+.goobook_cache
 .grdc
 .gstreamer-0.10
 #.gtk*
 .gtk-bookmarks
 .gtkpod
+.gtk-recordmydesktop
 .httrack.ini
 .i3/logfile
 .ICEauthority
+.icedtea/
+.icedteaplugin
 .icons
 .irssi/away.log
+.irssi/config.autosave
 .irssi.logs
 .jackdrc
 .jagex*
 .java
 .jigl
 .jmol
-.meysnail.tb.js
+.kchmviewer
 .kicad
 .last_backup
+.lastpass
 .launchpadlib
 .lesshst
 .liferea*
@@ -125,10 +126,14 @@
 .linterweb
 .lyrics
 .lyx
+.m2
 .macromedia
+.magnifier.ini
 .matplotlib
 .mc
 .mcop*
+.mcore
+.meysnail.tb.js
 .mixxx
 .mono
 .mozilla
@@ -141,9 +146,10 @@
 .mysql*
 .nautilus
 .nbi
-.neocomplcache
 .ncmpcpp/error.log
+.neocomplcache
 .neocon
+.NERDTreeBookmarks
 .netx*
 .newsbeuter
 .nexuiz
@@ -155,21 +161,21 @@
 .opendict
 .openoffice.org
 .packages.list
-.Prismatik
 .pan2
 .pentadac*
 .pgadmin3
 .pgpass
-.icedteaplugin
-.magnifier.ini
-.gtk-recordmydesktop
 .pida*
+.pip
 .pki
 .printer-groups.xml
+.Prismatik
+.processing
 .pulse/
 .pulse-cookie
 .purple
 .pyhistory
+.pythonbrew/
 .qemu-launcher
 .qf
 .qingy
@@ -177,6 +183,7 @@
 .quakelive
 .rage
 .recently-used*
+.remmina
 .rex
 .sage
 .scid
@@ -193,12 +200,14 @@
 .ssh/authorized_keys
 .ssh/id*
 .ssh/known_hosts
+.ssh/known_hosts.old
 .ssh/ugj*
 .sticky-notes*
 .subversion
 .sudo_as_admin_successful
 .sw*
 .*.swp
+.sxiv
 .synaptic
 .systemtap
 .tdrc
@@ -216,8 +225,10 @@
 .update-*
 .vagalume
 .vagrant*
+.vim/bundle/
 .viminf*
 .vimperator/info
+.vim/spell/
 .vim/.twitvim_token_file
 .vim/.VimballRecord
 .virtaal/tm.db
