--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -5,14 +5,14 @@ temp-night=5000
 transition=1
 ;gamma=0.8:0.7:0.8
 gamma=1.000:1.000:1.000
-location-provider=geoclue
-;location-provider=manual
+location-provider=manual
+;location-provider=geoclue
 adjustment-method=vidmode
 ;brightness=1.0:0.5
  
 ; The location provider and adjustment method settings
 ; are in their own sections.
-; This is an example lat long for Portland, OR
+; This is an example lat long for Mexico, D.F.
 [manual]
 lat=19.43
 lon=-99.13
