--- a/.mplayer/config
+++ b/.mplayer/config
@@ -1,4 +1,10 @@
-# Write your default config options here!
+fixed-vo="1"
+#noborder="1"
+nojoystick="1"
+# Use accelerated Xorg output for best performance
+vo="xv"
+# Enable zoommode when using mplayer without GUI
+#zoom="1"
+ao=alsa
 input=file=/tmp/mplayer.fifo
-
-
+nolirc="1"
