--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -200,7 +200,9 @@ incremental_seeking                = "yes"
 seek_time                          = "1"
 autocenter_mode                    = "yes"
 centered_cursor                    = "yes"
-progressbar_look                   = "=]"
+#progressbar_look                  = "=]"
+progressbar_look                   = "╼╼─"
+#progressbar_look                  = "▉▉ "
 default_place_to_search_in         = "database" (database/playlist)
 user_interface                     = "alternative" (classic/alternative)
 media_library_left_column          = "a" (possible values: a,y,g,c,p, legend above)
@@ -312,3 +314,4 @@ alternative_ui_separator_color = "blue"
 active_column_color            = "red"
 window_border_color            = "green"
 active_window_border           = "red"
+visualizer_color               = "white"
