--- a/.compton.conf
+++ b/.compton.conf
@@ -52,7 +52,7 @@ shadow = true;
 # Don't draw shadows on DND windows.
 no-dnd-shadow = true;
 # Avoid drawing shadows on dock/panel windows.
-#no-dock-shadow = true;
+no-dock-shadow = true;
 # Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
 clear-shadow = true;
 # The blur radius for shadows. (default 12)
@@ -65,9 +65,9 @@ shadow-offset-y = -5;
 shadow-opacity = 0.5;
 
 # Set if you want different colour shadows
-# shadow-red = 0.0;
-# shadow-green = 0.0;
-# shadow-blue = 0.0;
+shadow-red = 0.7;
+shadow-green = 0.7;
+shadow-blue = 0.7;
 
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
@@ -84,6 +84,9 @@ shadow-exclude = [
     "name *= 'Chromium'",
     "name *= 'Chrome'",
     "name *= 'Firefox'",
+    "name *= 'i3'",
+    "name *= 'dmenu'",
+    "name *= 'Password Required'",
     "class_g = 'Conky'",
     "class_g = 'Kupfer'",
     "class_g = 'Synapse'",
@@ -128,11 +131,11 @@ blur-background-exclude = [
 # Fade windows during opacity changes.
 fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 4;
+fade-delta = 1;
 # Opacity change between steps while fading in. (default 0.028).
-fade-in-step = 0.03;
+fade-in-step = 0.02;
 # Opacity change between steps while fading out. (default 0.03).
-fade-out-step = 0.03;
+fade-out-step = 0.02;
 # Fade windows in/out when opening/closing
 # no-fading-openclose = true;
 
