--- a/.ssh/config
+++ b/.ssh/config
@@ -1,10 +1,14 @@
 Host *
-    #use my local keys on remote machines
+    #connection sharing
+    ControlMaster auto
+    ControlPath /tmp/ssh_mux_%h_%p_%r
+    ControlPersist 3h
+    #use local keys on remote machines
     ForwardAgent yes
-    #keep the connection alive for finnecky servers, and kill it when the
-    #connection has died
-    ServerAliveInterval 15
-    ServerAliveCountMax 3
+    #keep the connection alive for finnecky servers
+    TCPKeepAlive no
+    ServerAliveInterval 60
+    ServerAliveCountMax 10
 
 Host buzz
     Port 1003
