add common ssh host settings

--- a/.ssh/config
+++ b/.ssh/config
@@ -19,17 +19,32 @@ Host *.pagekite.me
     CheckHostIP no
     ProxyCommand /bin/nc -X connect -x %h:443 %h %p
 
-Host home.javier.io
-    CheckHostIP no
-    ProxyCommand /bin/nc -X connect -x %h:443 %h %p
+Host msg.sh
+    User admin
 
 Host h.javier.io
     CheckHostIP no
     ProxyCommand /bin/nc -X connect -x %h:443 %h %p
 
-Host bitbucket.org
-    IdentityFile ~/.ssh/correo.io.id_rsa
+Host home.javier.io
+    CheckHostIP no
+    ProxyCommand /bin/nc -X connect -x %h:443 %h %p
+
+Host f.javier.io
+    User admin
+
+Host files.javier.io
+    User admin
+
+Host b.javier.io
+    User admin
+
+Host backup.javier.io
+    User admin
 
 Host ccand.cc #hostgator
     Port 2222
     PubkeyAuthentication no
+
+Host bitbucket.org
+    IdentityFile ~/.ssh/correo.io.id_rsa
