--- a/.minos/config
+++ b/.minos/config
@@ -1,4 +1,4 @@
-#minos configuration
+#minos configuration, minos.io/doc/config
 
 #general-wallpaper /usr/share/minos/wallpapers/sun.png
 general-wallpaper  $HOME/data/images/wallpapers/sun.png
@@ -7,6 +7,7 @@ general-wallpaper  $HOME/data/images/wallpapers/sun.png
 #lock-wallpaper    "$HOME/data/images/wallpapers/cui.png"
 lock-wallpaper     "$HOME/data/images/wallpapers/cu i.png"
 
+#lock settings
 #http://en.wikipedia.org/wiki/Web_colors#HTML_color_names
 #lock-color-inside              black
 #lock-color-inside-verification #fff
@@ -47,23 +48,26 @@ lock-wallpaper     "$HOME/data/images/wallpapers/cu i.png"
 #lock-color-keypress #A9A9A9
 #lock-color-keypress #fafafa
 
-statusbar        no
-statusbar-icons  sm4tik
-#composition      yes
-#keyboard-layouts latam,us,ru
-#hibernate-bin    pm-hibernate
-#suspend-bin      pm-suspend
+#statusbar           yes
+#statusbar-icons     sm4tik
+#statusbar-custom    command
+
+#composition         yes
+
+#keyboard-layouts    latam,us,ru
+#hibernate-bin       pm-hibernate
+#suspend-bin         pm-suspend
 
 #movietime-custom-script $HOME/.movietime
 
 #minos.io/s 
 setup-dotfiles    https://github.com/chilicuil/dotfiles
 setup-utils       https://github.com/chilicuil/learn/sh/tools
-setup-postinstall http://javier.io/s
-setup-preinstall  http://javier.io/s
+setup-postinstall http://javier.io/postinstall
+setup-preinstall  http://javier.io/preinstall
 setup-apps-purge  xinetd sasl2-bin sendmail sendmail-base sendmail-bin sensible-mda
 
 #mkdir ~/.minos
 #wget http://something/config -O ~/.minos/config
 #wget -qO- minos.io/s -O /tmp/s
-#sh /tmp/s d
+#sh /tmp/s
