--- a/.minos/config
+++ b/.minos/config
@@ -1,11 +1,13 @@
 #minos configuration, minos.io/doc/config
+#/etc/minos/config
+#~/.minos/config
 
-#general-wallpaper /usr/share/minos/wallpapers/sun.png
-general-wallpaper  $HOME/data/images/wallpapers/sun.png
+#general-wallpaper /usr/share/minos/wallpapers/sunlight.png
+general-wallpaper  $HOME/data/images/wallpapers/sunlight.png
 
 #lock-wallpaper    /usr/share/minos/wallpapers/cui.png
-#lock-wallpaper    "$HOME/data/images/wallpapers/cui.png"
-lock-wallpaper     "$HOME/data/images/wallpapers/cu i.png"
+lock-wallpaper     "$HOME/data/images/wallpapers/o@o.png"
+#lock-wallpaper    "$HOME/data/images/wallpapers/cu i.png"
 
 #lock settings
 #http://en.wikipedia.org/wiki/Web_colors#HTML_color_names
@@ -47,6 +49,9 @@ lock-wallpaper     "$HOME/data/images/wallpapers/cu i.png"
 ##grey
 #lock-color-keypress #A9A9A9
 #lock-color-keypress #fafafa
+
+#startup             yes
+#startup-custom      /etc/minos/startup
 
 #statusbar           yes
 #statusbar-icons     sm4tik
