--- a/.ssh/config
+++ b/.ssh/config
@@ -10,37 +10,22 @@ Host *
     ServerAliveInterval 60
     ServerAliveCountMax 10
 
-Host buzz
-    Port 1003
-    #LocalCommand echo buzz
-    #PermitLocalCommand yes
-
 Host *.pagekite.me
     CheckHostIP no
     ProxyCommand /bin/nc -X connect -x %h:443 %h %p
 
-Host msg.sh
-    User admin
-
-Host h.javier.io
+Host h*.javier.io
+    User chilicuil
     CheckHostIP no
     ProxyCommand /bin/nc -X connect -x %h:443 %h %p
 
-Host home.javier.io
-    CheckHostIP no
-    ProxyCommand /bin/nc -X connect -x %h:443 %h %p
-
-Host f.javier.io
+Host *.javier.io msg.sh
     User admin
 
-Host files.javier.io
-    User admin
-
-Host b.javier.io
-    User admin
-
-Host backup.javier.io
-    User admin
+Host buzz
+    Port 1003
+    #LocalCommand echo buzz
+    #PermitLocalCommand yes
 
 Host ccand.cc #hostgator
     Port 2222
