readline vi mode on asteroids

--- a/.inputrc
+++ b/.inputrc
@@ -2,10 +2,39 @@ $include /etc/inputrc
 
 #vi mode
 $if mode=vi
-
 set keymap vi-command
 Control-l: clear-screen
+.: yank-last-arg
+"p": "i !*\r"
+|: "A | "
+"D":kill-line
+"dw": kill-word
+"dd": kill-whole-line
+"db": backward-kill-word
+"cc": "ddi"
+"cw": "dwi"
+"cb": "dbi"
+"daw": "lbdw"
+"yaw": "lbyw"
+"caw": "lbcw"
+"daW": "lBdW"
+"yaW": "lByW"
+"ciW": "caW"
+"diw": "daW"
+"yiw": "yaw"
+"ciw": "caw"
+"diW": "daW"
+"yiW": "yaW"
+"ciW": "caW"
+"gg": beginning-of-history
+"G": end-of-history
+?: reverse-search-history
+/: forward-search-history
 
 set keymap vi-insert
 Control-l: clear-screen
+"\C-a": beginning-of-line
+"\C-e": end-of-line
+"\e[A": history-search-backward
+"\e[B": history-search-forward
 $endif
