--- a/.inputrc
+++ b/.inputrc
@@ -4,28 +4,67 @@ $include /etc/inputrc
 $if mode=vi
 set keymap vi-command
 Control-l: clear-screen
-.: yank-last-arg
-"p": "i !*\r"
-|: "A | "
+"#": insert-comment
+".": "i !*\r"
+"|": "A | "
 "D":kill-line
+"C": "Da"
 "dw": kill-word
 "dd": kill-whole-line
 "db": backward-kill-word
 "cc": "ddi"
 "cw": "dwi"
 "cb": "dbi"
-"daw": "lbdw"
-"yaw": "lbyw"
-"caw": "lbcw"
-"daW": "lBdW"
-"yaW": "lByW"
-"ciW": "caW"
-"diw": "daW"
-"yiw": "yaw"
-"ciw": "caw"
-"diW": "daW"
-"yiW": "yaW"
-"ciW": "caW"
+"daw": "lbdW"
+"yaw": "lbyW"
+"caw": "lbcW"
+"diw": "lbdw"
+"yiw": "lbyw"
+"ciw": "lbcw"
+"da\"": "lF\"df\""
+"di\"": "lF\"lmtf\"d`t"
+"ci\"": "di\"i"
+"ca\"": "da\"i"
+"da'": "lF'df'"
+"di'": "lF'lmtf'd`t"
+"ci'": "di'i"
+"ca'": "da'i"
+"da`": "lF\`df\`"
+"di`": "lF\`lmtf\`d`t"
+"ci`": "di`i"
+"ca`": "da`i"
+"da(": "lF(df)"
+"di(": "lF(lmtf)d`t"
+"ci(": "di(i"
+"ca(": "da(i"
+"da)": "lF(df)"
+"di)": "lF(lmtf)d`t"
+"ci)": "di(i"
+"ca)": "da(i"
+"da{": "lF{df}"
+"di{": "lF{lmtf}d`t"
+"ci{": "di{i"
+"ca{": "da{i"
+"da}": "lF{df}"
+"di}": "lF{lmtf}d`t"
+"ci}": "di}i"
+"ca}": "da}i"
+"da[": "lF[df]"
+"di[": "lF[lmtf]d`t"
+"ci[": "di[i"
+"ca[": "da[i"
+"da]": "lF[df]"
+"di]": "lF[lmtf]d`t"
+"ci]": "di]i"
+"ca]": "da]i"
+"da<": "lF<df>"
+"di<": "lF<lmtf>d`t"
+"ci<": "di<i"
+"ca<": "da<i"
+"da>": "lF<df>"
+"di>": "lF<lmtf>d`t"
+"ci>": "di>i"
+"ca>": "da>i"
 "gg": beginning-of-history
 "G": end-of-history
 ?: reverse-search-history
