add minos ssh settings

--- a/.ssh/config
+++ b/.ssh/config
@@ -19,7 +19,7 @@ Host h*.javier.io
     CheckHostIP no
     ProxyCommand /bin/nc -X connect -x %h:443 %h %p
 
-Host *.javier.io msg.sh
+Host *.javier.io msg.sh *.minos.io
     User admin
 
 Host buzz
