--- a/.ssh/config
+++ b/.ssh/config
@@ -3,8 +3,8 @@ Host *
     ControlMaster auto
     ControlPath /tmp/ssh_mux_%h_%p_%r
     ControlPersist 3h
-    #use local keys on remote machines
-    ForwardAgent yes
+    #use local keys on remote machines, http://git.io/vO2A6
+    #ForwardAgent yes
     #keep the connection alive for finnecky servers
     TCPKeepAlive no
     ServerAliveInterval 60
