--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,11 @@
 .zathura
 .zenmap
 .ZoiperCommunicator
+.Xdefaults-theme-colorize
+.aom-savegame/
+.gnupg/
+.movietime-suspend-inhibit
+.mozilla-backups/
+.pianocat/
+.vim/
+.warcraft3-savegame/
