add personal tmux settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,43 @@
-#let's start by modifing the current configuration so it initializes the
-#tundle plugins in background and keep a nice startup time
+#===============================================================================
+#============================== General settings ===============================
+#===============================================================================
+
+#set -g default-terminal 'screen-256color'       # $TERM
+set -g default-terminal  'rxvt-unicode-256color' # $TERM
+
+#set -g set-titles on
+#set -g set-titles-string '#(whoami)@#h[#(wget -q -O- http://ipecho.net/plain;echo)]'
+
+#setw -g aggressive-resize on #already set in tundle-plugins/tmux-sensible
+
+#start windows and panes at 1, not 0, to match with vim, bspwm and i3
+set -g base-index      1
+set -g pane-base-index 1
+
+#set -g utf8 on          #already set in tundle-plugins/tmux-sensible
+#set -g status-utf8 on   #already set in tundle-plugins/tmux-sensible
+
+#monitoring
+setw -g monitor-activity on
+
+#toggle activity/silence
+bind m setw monitor-activity
+bind _ command-prompt -p 'monitor-silence (seconds)' 'setw monitor-silence %%'
+
+#bind R in tundle-plugins/tmux-sensible
+bind-key r run-shell 'tmux source-file ~/.tmux.conf > /dev/null; \
+                      tmux display-message "Sourced .tmux.conf!"'
+
+set -g status-left-length 40
+set -g status-left  '#(hostname -f) :: [#S] '
+set -g status-right '%H:%M %d-%b-%y'
+
+#===============================================================================
+#=================================== Plugins ===================================
+#===============================================================================
+
+#modifing the current configuration so it initializes the tundle plugins in
+#background and keep a nice startup time
 
 #this is ugly but so it's tmux, on tmux 1.9 and later a new mode was added to
 #run-shell, if-shell, now they both run in foreground by default and add a -b
@@ -11,10 +49,10 @@
 #depending on the tmux version but avoid touching the first run-shell cmd so it
 #doesn't become accidentaly uncompatible with old tmux versions (1.6)
 
-run-shell "if [ $(tmux -V | tr -dC '0123456789') -ge 19 ]; then awk '/^[ \t]*run-shell[ \t]*\"/ { if (f == 1) gsub(/run-shell/,\"run-shell -b\"); f = 1 } {gsub(/^[ \t]*if-shell/,\"if-shell -b\"); print}' ~/.tmux.conf > ~/.tmux.conf.tmp; mv ~/.tmux.conf.tmp ~/.tmux.conf; else awk '{gsub(/^[ \t]*if-shell -b/,\"if-shell\"); gsub(/^[ \t]*run-shell -b/,\"run-shell\"); print}' ~/.tmux.conf > ~/.tmux.conf.tmp; mv ~/.tmux.conf.tmp ~/.tmux.conf; fi"
+run-shell "if [ $(tmux -V | tr -dC '0123456789') -ge 19 ]; then awk '/^[ \t]*run-shell[ \t]*\"/ { if (f == 1) gsub(/run-shell/,\"run-shell -b\"); f = 1 } {gsub(/^[ \t]*if-shell[ \t]*\"/,\"if-shell -b\"); print}' ~/.tmux.conf > ~/.tmux.conf.tmp; mv ~/.tmux.conf.tmp ~/.tmux.conf; else awk '{gsub(/^[ \t]*if-shell -b/,\"if-shell\"); gsub(/^[ \t]*run-shell -b/,\"run-shell\"); print}' ~/.tmux.conf > ~/.tmux.conf.tmp; mv ~/.tmux.conf.tmp ~/.tmux.conf; fi"
 
 #if tundle isn't around install it
-if-shell "sleep 0.2; test ! -f ~/.tmux/plugins/tundle/tundle" \
+if-shell -b "sleep 0.2; test ! -f ~/.tmux/plugins/tundle/tundle" \
     "command-prompt -p 'Setting up tundle ... this may take a while ... wanna continue? (y/n):' \
     \"send-keys C-c; \
     run-shell 'if test %1 = y || test %1 = Y; then \
@@ -22,7 +60,7 @@ if-shell "sleep 0.2; test ! -f ~/.tmux/plugins/tundle/tundle" \
         tmux source-file ~/.tmux.conf && sleep 0.2 && \
         sh ~/.tmux/plugins/tundle/scripts/install_plugins.sh; fi'\""
 
-run-shell "~/.tmux/plugins/tundle/tundle"
+run-shell -b "~/.tmux/plugins/tundle/tundle"
 
 #let tundle manage tundle, required!
 setenv -g @bundle "chilicuil/tundle"
@@ -39,3 +77,4 @@ setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-open"
 setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-resurrect"
 setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-continuum"
 setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-logging"
+setenv -g @bundle "gh:chilicuil/tundle-plugins/tmux-sessionist"
