add xzoom to the ignore list

--- a/.compton.conf
+++ b/.compton.conf
@@ -76,6 +76,7 @@ shadow-exclude = [
     "! name~=''",
     "name = 'Notification'",
     "name = 'Plank'",
+    "name *= 'xzoom'",
     "name = 'Docky'",
     "name = 'Kupfer'",
     "name = 'xfce4-notifyd'",
