--- a/.minos/config
+++ b/.minos/config
@@ -65,9 +65,9 @@ m-screenshot         screenshot
 m-screencast         ffcast
 
 #minos.io/s
-setup-dotfiles       https://github.com/chilicuil/dotfiles
-#setup-hook           http://minos.io/hook
-setup-app-core       mozilla-firefox mozilla-flashplayer
-setup-app-desktop    mozilla-firefox mozilla-flashplayer
+dotfiles       https://github.com/chilicuil/dotfiles
+hook           http://minos.io/hook
+app-core       mozilla-firefox mozilla-flashplayer
+app-desktop    mozilla-firefox mozilla-flashplayer
 #core,desktop?
-setup-app-purge      xinetd sasl2-bin sendmail sendmail-base sendmail-bin sensible-mda rmail bsd-mailx apache2.2-common apache2 nano bind9 whoopsie
+app-purge      xinetd sasl2-bin sendmail sendmail-base sendmail-bin sensible-mda rmail bsd-mailx apache2.2-common apache2 nano bind9 whoopsie
