--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,34 @@
-#Last review            Sun 15 Feb 2015 02:23:02 PM CST
+#Last review            Sat 26 Dec 2015 01:45:55 PM CST
 #Ignore everything
 /*
 #Don't ignore dotfiles
 !.*
 
 #But ignore these
+.*.swp
 .AbiSuite
+.DownloadManager
+.ICEauthority
+.NERDTreeBookmarks
+.Prismatik
+.VirtualBox
+.Xauthority
+.Xdefaults-theme-colorize
+.Xscrc
+.ZoiperCommunicator
+._noip-2.1.9-1
 .adobe
 .alien-arena
 .android
+.aom-savegame/
 .appletviewer
 .arduino
 .asadmin*
 .asoundrc*
 .aspell.*
-.bashdb*
 .bash_eternal_history
 .bash_history
+.bashdb*
 .bazaar
 .bin
 .bittorrent
@@ -28,14 +40,15 @@
 .ccache*
 .cccache/
 .checkbox
-.compiz
 .com.zerog.registry.xml
+.compiz
+.config/LightTable/
+.config/Popcorn-Time/
 .config/feh/
+.config/gpick/
 .config/htop/
 .config/inkscape/
-.config/LightTable/
 .config/mps/
-.config/Popcorn-Time/
 .config/sublime-text-2/
 .config/sublime-text-3/
 .config/terminology/
@@ -55,7 +68,6 @@
 .directory
 .dmenu_cache
 .dmrc
-.DownloadManager
 .dreampie
 .dvdcss/
 .dynamag
@@ -63,8 +75,8 @@
 .easy_e17.conf*
 .enna
 .esd_auth
-.eternalize-data
 .et_patterns_remove
+.eternalize-data
 .exaile
 .exchange
 .fehbg
@@ -93,25 +105,22 @@
 .gnochm
 .gnome*
 .gntpositions
-#.gnu*
-#.gnupg
+.gnupg/
 .golly
 .goobook_cache
 .grdc
 .gstreamer-0.10
-#.gtk*
 .gtk-bookmarks
-.gtkpod
 .gtk-recordmydesktop
+.gtkpod
 .httrack.ini
 .i3/logfile
-.ICEauthority
 .icedtea/
 .icedteaplugin
 .icons
+.irssi.logs
 .irssi/away.log
 .irssi/config.autosave
-.irssi.logs
 .jackdrc
 .jagex*
 .java
@@ -126,6 +135,7 @@
 .liferea*
 .links*
 .links2
+.linphone*
 .linterweb
 .lyrics
 .lyx
@@ -139,7 +149,9 @@
 .meysnail.tb.js
 .mixxx
 .mono
+.movietime-suspend-inhibit
 .mozilla
+.mozilla-backups/
 .mozilla.back*
 .mp3blaster
 .msf*
@@ -152,11 +164,9 @@
 .ncmpcpp/error.log
 .neocomplcache
 .neocon
-.NERDTreeBookmarks
 .netx*
 .newsbeuter
 .nexuiz
-._noip-2.1.9-1
 .nvidia-settings-rc
 .octave_hist
 .ooo*
@@ -168,14 +178,14 @@
 .pentadac*
 .pgadmin3
 .pgpass
+.pianocat/
 .pida*
 .pip
 .pki
 .printer-groups.xml
-.Prismatik
 .processing
-.pulse/
 .pulse-cookie
+.pulse/
 .purple
 .pyhistory
 .pythonbrew/
@@ -210,7 +220,6 @@
 .subversion
 .sudo_as_admin_successful
 .sw*
-.*.swp
 .sxiv
 .synaptic
 .systemtap
@@ -222,6 +231,7 @@
 .themes
 .thumbnails
 .thunderbird
+.tmux
 .todo
 .translate_toolkit
 .tsclient
@@ -229,36 +239,36 @@
 .update-*
 .vagalume
 .vagrant*
+.vim/
+.vim/.VimballRecord
+.vim/.twitvim_token_file
 .vim/bundle/
+.vim/spell/
 .viminf*
 .vimperator/info
-.vim/spell/
-.vim/.twitvim_token_file
-.vim/.VimballRecord
 .virtaal/tm.db
-.VirtualBox
 .vlc
 .vnc/
 .w3m
+.warcraft3-savegame/
 .wcd
 .wesnoth*
 .whoami
 .wine
 .wireshark
+.wm_style
 .wmcliphis*
 .wmii
 .wmndrc
 .wmpinboarddata
 .wmrecord
-.wm_style
+.workrave
 .wxglade
-.Xauthority
 .xbmc
 .xine
 .xmdd*
 .xmind
 .xmms
-.Xscrc
 .xscreensaver-getimage.cache
 .xsession-errors
 .xvidcaprc
@@ -267,12 +277,3 @@
 .yast*
 .zathura
 .zenmap
-.ZoiperCommunicator
-.Xdefaults-theme-colorize
-.aom-savegame/
-.gnupg/
-.movietime-suspend-inhibit
-.mozilla-backups/
-.pianocat/
-.vim/
-.warcraft3-savegame/
